swagger upd, register request extended
