# docs/swagger.json
@@ -109,6 +109,22 @@
                     "description": "Password, which will be used with secret",
                     "type": "string"
                 },
+                "preferred_bank_name": {
+                    "description": "PreferredBankName is used to created initial salary wallet",
+                    "type": "string"
+                },
+                "salary": {
+                    "description": "Salary may be 0, then you'll need to manually set your salary every month",
+                    "type": "integer"
+                },
+                "salary_currency": {
+                    "description": "SalaryCurrency",
+                    "type": "string"
+                },
+                "salary_date": {
+                    "description": "SalaryDate may be zero, then you'll need to confirm achieving your salary",
+                    "type": "string"
+                },
                 "username": {
                     "description": "Username, which will be displayed and unique.",
                     "type": "string"
@@ -141,6 +157,14 @@
                             "$ref": "#/definitions/models.UserPermission"
                         }
                     ]
+                },
+                "wallet": {
+                    "description": "Wallet created initial wallet for salary",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/models.Wallet"
+                        }
+                    ]
                 }
             }
         },
@@ -155,6 +179,21 @@
                 "AccessLevelOwner",
                 "AccessLevelFull",
                 "AccessLevelRead"
+            ]
+        },
+        "models.Currency": {
+            "type": "string",
+            "enum": [
+                "USD",
+                "EUR",
+                "BYN",
+                "RUB"
+            ],
+            "x-enum-varnames": [
+                "CurrencyUSD",
+                "CurrencyEUR",
+                "CurrencyBYN",
+                "CurrencyRUB"
             ]
         },
         "models.PermissionGroup": {
@@ -212,7 +251,37 @@
                 "permission_group_id": {
                     "type": "integer"
                 },
-                "userId": {
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.Wallet": {
+            "type": "object",
+            "properties": {
+                "bank_id": {
+                    "description": "BankId refers to internal bank id",
+                    "type": "integer"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "currency": {
+                    "$ref": "#/definitions/models.Currency"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "isSalary": {
+                    "type": "boolean"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "permissionGroupId": {
                     "type": "integer"
                 }
             }
